# speech-ai-tool

./: README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml  version-bump.yml
docs/: macos-local-signing.md
scripts/: build-local-macos.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  error.rs  history.rs  hotkey.rs  lib.rs  llm.rs  macos_event_tap.rs  macos_microphone.rs  main.rs  output.rs  pipeline.rs  settings.rs  sounds.rs  tray.rs  whisper.rs
src/components/: AudioDeviceSelect.tsx  HistoryList.tsx  HotkeyInput.tsx  LlmSettings.tsx  ModelDownload.tsx  SettingsPage.tsx  StatusIndicator.tsx  StatusOverlay.tsx  TranscriptionView.tsx  WhisperSettings.tsx
src/hooks/: useAppState.ts  useHistory.ts  useSettings.ts
src/lib/: commands.ts  types.ts
