[package]
name = "speech-ai-tool"
version = "0.2.3"
edition = "2021"
license = "GPL-3.0-only"

[lib]
name = "speech_ai_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
hound = "3.5"
bytemuck = "1.14"
whisper-rs = "0.13"
dirs = "6"
num_cpus = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
futures = "0.3"
rdev = "0.5"
tauri-plugin-clipboard-manager = "2"
enigo = "0.2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rodio = { version = "0.19", default-features = false, features = ["wav"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
gdk = "0.18"
